<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_5sdp">

    <EditText
        android:id="@+id/old_pass"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_margin="@dimen/_10sdp"
        android:fontFamily="@font/basier_circle"
        android:hint="@string/old_pass"
        android:inputType="textPassword"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/new_pass"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_margin="@dimen/_10sdp"
        android:fontFamily="@font/basier_circle"
        android:hint="@string/new_pass"
        android:inputType="textPassword"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/old_pass" />


    <Button
        android:id="@+id/update_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:backgroundTint="@color/colorGreen"
        android:fontFamily="@font/basier_circle"
        android:padding="@dimen/_10sdp"
        android:text="@string/label_update"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/new_pass" />


</androidx.constraintlayout.widget.ConstraintLayout>