<?xml version="1.0" encoding="utf-8"?>
<layout>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbarThumbVertical="@null"
        tools:context=".auth.LoginActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_root"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/basiercircle_medium"
                android:text="@string/label_login"
                android:textColor="@color/navy"
                android:textSize="@dimen/_28ssp"
                app:layout_constraintBottom_toTopOf="@id/cl_input_fields"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_input_fields"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_7sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:autofillHints="null"
                    android:background="@drawable/edittext_background"
                    android:fontFamily="@font/basiercircle_regular"
                    android:hint="@string/email"
                    android:importantForAutofill="no"
                    android:inputType="textNoSuggestions|textEmailAddress"
                    android:paddingStart="@dimen/_26sdp"
                    android:paddingTop="@dimen/_12sdp"
                    android:paddingEnd="@dimen/_26sdp"
                    android:paddingBottom="@dimen/_12sdp"
                    android:textColor="@color/navy"
                    android:textSize="@dimen/_10ssp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/password_container"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginTop="@dimen/_7sdp"
                    android:layout_marginHorizontal="@dimen/_20sdp"
                    android:background="@drawable/edittext_background"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/et_email">

                    <EditText
                        android:id="@+id/et_password"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="@dimen/_5sdp"
                        android:autofillHints="null"
                        android:background="@android:color/transparent"
                        android:fontFamily="@font/basiercircle_regular"
                        android:hint="@string/pass"
                        android:importantForAutofill="no"
                        android:inputType="textPassword"
                        android:paddingHorizontal="@dimen/_26sdp"
                        android:paddingVertical="@dimen/_12sdp"
                        android:textColor="@color/navy"
                        android:textSize="@dimen/_10ssp"
                        app:layout_constraintEnd_toStartOf="@id/pass_hide"
                        app:layout_constraintStart_toStartOf="parent" />

                    <ImageView
                        android:id="@+id/pass_hide"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:src="@drawable/ic_hide"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/forgot_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:background="?android:attr/selectableItemBackground"
                android:fontFamily="@font/basiercircle_regular"
                android:padding="@dimen/_3sdp"
                android:text="@string/forgot_pass"
                android:textColor="@color/steel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cl_input_fields" />

            <TextView
                android:id="@+id/btn_login_in"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_40sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:background="@drawable/bg_active"
                android:fontFamily="@font/basiercircle_semibold"
                android:gravity="center"
                android:text="@string/label_login"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintTop_toBottomOf="@id/forgot_pass" />

            <LinearLayout
                android:id="@+id/ll_create_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_40sdp"
                android:background="?android:selectableItemBackground"
                android:orientation="horizontal"
                android:paddingStart="@dimen/_5sdp"
                android:paddingTop="@dimen/_3sdp"
                android:paddingEnd="@dimen/_5sdp"
                android:paddingBottom="@dimen/_3sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_login_in">

                <TextView
                    android:id="@+id/new_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/basiercircle_regular"
                    android:text="@string/label_new_user"
                    android:textColor="@color/steel"
                    android:textSize="@dimen/_12ssp" />

                <TextView
                    android:id="@+id/create_an_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:fontFamily="@font/basiercircle_regular"
                    android:text="@string/label_create_account"
                    android:textColor="@color/colorGreen"
                    android:textSize="@dimen/_12ssp" />
            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>