<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/_20sdp">

        <TextView
            android:id="@+id/heading"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:background="@drawable/rounded_bottomsheet_design"
            android:fontFamily="@font/basiercircle_medium"
            android:gravity="center"
            android:textColor="@color/navy"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold"
            android:translationZ="@dimen/_3sdp"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/ratings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_15sdp"
            android:fontFamily="@font/basiercircle_medium"
            android:text="@string/label_ratings"
            android:textColor="@color/colorGreen"
            android:textSize="@dimen/_12ssp"
            android:translationZ="@dimen/_3sdp"
            app:layout_constraintBottom_toBottomOf="@id/heading"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/heading" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:paddingStart="@dimen/_20sdp"
            android:paddingEnd="@dimen/_20sdp"
            app:layout_constraintTop_toBottomOf="@id/heading">


            <TextView
                android:id="@+id/business_name_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/basiercircle_medium"
                android:text="@string/business_name"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/business_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_3sdp"
                android:fontFamily="@font/basiercircle_regular"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintStart_toStartOf="@id/business_name_title"
                app:layout_constraintTop_toBottomOf="@id/business_name_title" />

            <TextView
                android:id="@+id/name_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/basiercircle_medium"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/business_name" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_3sdp"
                android:fontFamily="@font/basiercircle_regular"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintStart_toStartOf="@id/name_title"
                app:layout_constraintTop_toBottomOf="@id/name_title" />

            <TextView
                android:id="@+id/address_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/basiercircle_medium"
                android:text="@string/label_address"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintStart_toStartOf="@id/name"
                app:layout_constraintTop_toBottomOf="@id/name" />

            <TextView
                android:id="@+id/address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_3sdp"
                android:fontFamily="@font/basiercircle_regular"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintStart_toStartOf="@id/address_title"
                app:layout_constraintTop_toBottomOf="@id/address_title" />

            <TextView
                android:id="@+id/availability_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:fontFamily="@font/basiercircle_regular"
                android:text="@string/not_available"
                android:textColor="@color/Red"
                android:textSize="@dimen/_12ssp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/address" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:paddingStart="@dimen/_20sdp"
            android:paddingEnd="@dimen/_20sdp"
            app:layout_constraintTop_toBottomOf="@id/body">

            <com.mikhaellopez.circularimageview.CircularImageView
                android:id="@+id/call"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:background="?android:actionBarItemBackground"
                android:src="@drawable/ic_call_cta"
                app:layout_constraintEnd_toStartOf="@id/chat"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.mikhaellopez.circularimageview.CircularImageView
                android:id="@+id/chat"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:background="?android:actionBarItemBackground"
                android:src="@drawable/ic_chat_cta"
                app:layout_constraintEnd_toStartOf="@id/navigate"
                app:layout_constraintStart_toEndOf="@id/call"
                app:layout_constraintTop_toTopOf="parent" />

            <com.mikhaellopez.circularimageview.CircularImageView
                android:id="@+id/navigate"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:background="?android:actionBarItemBackground"
                android:src="@drawable/ic_navigation_cta"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/chat"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>