<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/_20sdp">

        <TextView
            android:id="@+id/heading"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:background="@drawable/rounded_bottomsheet_design"
            android:fontFamily="@font/basiercircle_medium"
            android:gravity="center"
            android:text="@string/rate_your_experience"
            android:textColor="@color/navy"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold"
            android:translationZ="@dimen/_3sdp"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/_30sdp"
            app:layout_constraintTop_toBottomOf="@id/heading">

            <me.zhanghai.android.materialratingbar.MaterialRatingBar
                android:id="@+id/ratings"
                style="@style/Widget.MaterialRatingBar.RatingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:padding="@dimen/_5sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:mrb_fillBackgroundStars="true"
                app:mrb_progressTint="@color/colorGreen" />

            <EditText
                android:id="@+id/rating_message"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_170sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:background="@drawable/edittext_background"
                android:gravity="start"
                android:hint="@string/hint_tell_your_exp"
                android:maxLength="100"
                android:paddingStart="@dimen/_20sdp"
                android:paddingTop="@dimen/_10sdp"
                android:paddingEnd="@dimen/_20sdp"
                android:paddingBottom="@dimen/_10sdp"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintTop_toBottomOf="@id/ratings" />

            <Button
                android:id="@+id/payment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:backgroundTint="@color/colorGreen"
                android:fontFamily="@font/basiercircle_medium"
                android:padding="@dimen/_10sdp"
                android:text="@string/label_payment"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintStart_toStartOf="@id/rating_message"
                app:layout_constraintTop_toBottomOf="@id/rating_message" />

            <Button
                android:id="@+id/done"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:backgroundTint="@color/colorGreen"
                android:fontFamily="@font/basiercircle_medium"
                android:padding="@dimen/_10sdp"
                android:text="@string/mdtp_done_label"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintEnd_toEndOf="@id/rating_message"
                app:layout_constraintTop_toBottomOf="@id/rating_message" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>